--- a/eca-web/src/main/resources/src/app/filter/components/filter.component.scss
+++ b/eca-web/src/main/resources/src/app/filter/components/filter.component.scss
@@ -5,9 +5,11 @@
 }
 
 .filter-button {
-  margin-left: 10px;
+  width: 125px;
   margin-top: 25px;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .filter-panel::ng-deep {
